test/spec_vectors/br/fail/module_18.wat
(module (func $unbound-label (br 1)))